# simplechatbot

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  project.py  pyproject.toml  sitemap.xml
docs/: index.md
docs/examples/: a-overview.md  b-model_specific_chatbots.md  b-tool_calling.md  c-model_specific_chatbots.md  c-structured_outputs.md  d-tool_calling.md  d_multi-agent_example.md  f-multi-agent_example.md  overview.md
examples/a-overview/: index.html
examples/b-model_specific_chatbots/: index.html
examples/b-tool_calling/: index.html
examples/c-model_specific_chatbots/: index.html
examples/c-structured_outputs/: index.html
experiments/: pydanticai_experiments.ipynb  streaming.ipynb  test_dnd.py  test_inter-agent_communication.py
scripts/: chroma_exploration.py  main1.py  main2_retriever_tool.py  main3_workspaces.py  main4_multi-bot_tests.py  main5_gmail_tests.py
search/: search_index.json
simplechatbot/: __init__.py
site_examples/: a-overview.ipynb  b-model_specific_chatbots.ipynb  b-tool_calling.ipynb  c-model_specific_chatbots.ipynb  c-structured_outputs.ipynb  chatbot_objects.ipynb  d-tool_calling.ipynb  d_multi-agent_example.ipynb  e_advanced_tool_calling.ipynb  f-multi-agent_example.ipynb  f-structured_outputs.ipynb  overview.ipynb
tests/: learning_pydantic-ai.py  rpg_agents.py  test_chatbot.py  test_chatbot_ai.py  test_context_window_length.py  test_dnd.py  test_inter-agent_communication.py  test_mistral.py  test_promptmanager.py  test_rag.py  test_structbot.py  testing_andrew_llm_class.ipynb
(+94 files in other folders)
